--- a/app/templates/pay.html
+++ b/app/templates/pay.html
@@ -7,9 +7,9 @@
 		<button class="btn btn-lg btn-success m-t-l pay-btn" ng-click="payAction()">Pay Now</button>
 	</div>
 	<div class="col-sm-12 center m-t-l" ng-show="paid == true">
-		<img src="/assets/img/success.png" style="width:15%" />
-		<h1 class="white">Success!</h1>
-		<h4 class="white">You have earned 20 loyalty points!</h4>
+		<img src="/assets/img/success.png" style="width:15%; margin-top:400px;" />
+		<h1 class="white welcome-subtext">Success!</h1>
+		<h4 class="white success-text">You have earned 20 loyalty points!</h4>
 		<button class="btn btn-lg btn-default m-t-l pay-btn" ng-click="goHome()">Done</button>
 	</div>
 </div>
