--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -911,7 +911,7 @@ table.dataTable thead > tr > th, table.dataTable tbody > tr > td {
   position: relative; }
 
 body {
-  background: #3498db; }
+  background: #000; }
 
 #PINform input:focus,
 #PINform select:focus,
@@ -983,17 +983,41 @@ body {
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3); }
 
 .pay-amount {
-  font-size: 72px;
+  font-size: 120px;
   color: #fff;
-  margin-top: 200px; }
+  margin-top: 500px; }
 
 .pay-btn {
   min-width: 300px;
   border-radius: 0;
   text-transform: uppercase;
-  padding: 20px; }
+  font-size: 55px;
+  padding: 40px 120px;
+  margin-top: 110px !important; }
 
 .receipt-img {
   margin-top: 100px; }
+
+.welcome-block {
+  padding-top: 500px;
+  padding-bottom: 500px; }
+
+.welcome-text {
+  font-size: 140px;
+  font-weight: 100;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px; }
+
+.welcome-subtext {
+  font-size: 75px;
+  font-weight: 100;
+  color: #fff;
+  text-align: center; }
+
+.success-text {
+  font-size: 48px;
+  margin-top: 50px; }
 
 /*# sourceMappingURL=styles.css.map */
