--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -912,7 +912,7 @@ table.dataTable thead > tr > th, table.dataTable tbody > tr > td {
   position: relative; }
 
 body {
-  background: #000; }
+  background: #29a1da; }
 
 #PINform input:focus,
 #PINform select:focus,
