--- a/app/templates/pay.html
+++ b/app/templates/pay.html
@@ -3,6 +3,7 @@
 		<img src="/assets/img/locomobi-logo.png" />
 	</div>
 	<div class="col-sm-12 center m-t-l" ng-show="paid == false">
+		<h1 class="pay-amount m-b-l">$20.00</h1>
 		<h1 class="pay-amount">Please Insert your credit card.</h1>
 		<i class="fa fa-long-arrow-right" aria-hidden="true" style="font-size: 150px;margin-top: 30px; color: #fff;"></i>
 		<!-- <button class="btn btn-lg btn-success m-t-l pay-btn" ng-click="payAction()">Pay Now</button> -->
